--- a/PharmacyProApi.Core.Interfaces/PharmacyProApi.Core.Interfaces.csproj
+++ b/PharmacyProApi.Core.Interfaces/PharmacyProApi.Core.Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9017E307-6A0F-46DF-B82A-A0415E221946}</ProjectGuid>
+    <ProjectGuid>{1F36F25D-2091-46BB-88D8-410110FCEF09}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PharmacyProApi.Core.BusinessLogic</RootNamespace>
-    <AssemblyName>PharmacyProApi.Core.BusinessLogic</AssemblyName>
+    <RootNamespace>Interfaces</RootNamespace>
+    <AssemblyName>Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,14 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Pharmacy\Authentication.cs" />
+    <Compile Include="IAuthentication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PharmacyProApi.Core.Interfaces\PharmacyProApi.Core.Interfaces.csproj">
-      <Project>{1F36F25D-2091-46BB-88D8-410110FCEF09}</Project>
-      <Name>PharmacyProApi.Core.Interfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
