--- a/PharmacyProApi.Core.Types/PharmacyProApi.Core.Types.csproj
+++ b/PharmacyProApi.Core.Types/PharmacyProApi.Core.Types.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{45A59D2B-110E-4722-A43C-661548718B97}</ProjectGuid>
+    <ProjectGuid>{68B381BC-125C-46B1-851F-E5465F19D844}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Results</RootNamespace>
-    <AssemblyName>Results</AssemblyName>
+    <RootNamespace>PharmacyProApi.Core.Types</RootNamespace>
+    <AssemblyName>PharmacyProApi.Core.Types</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,15 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthenticationResult.cs" />
+    <Compile Include="AuthenicationState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ResultBase.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PharmacyProApi.Core.Types\PharmacyProApi.Core.Types.csproj">
-      <Project>{68B381BC-125C-46B1-851F-E5465F19D844}</Project>
-      <Name>PharmacyProApi.Core.Types</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
